test/cli/test-fail/invalid-ns/kyverno-test.yaml
name: test-exclude
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Namespace
  policy: restrict-labels
  resources:
  - kyverno-system-tst
  result: fail
  rule: restrict-labels
